Fixed clipboard button alignment

--- a/contentcuration/contentcuration/static/less/queue.less
+++ b/contentcuration/contentcuration/static/less/queue.less
@@ -62,6 +62,7 @@
 	    z-index: 999;
 	    pointer-events: none;
       	position: relative;
+      	text-align: right;
       	padding: 0px 0px 35px 15px;
 		margin: 0px 0px -35px -15px;
 
